# openface-android-sample

./: CMakeLists.txt  README.md
OpenFaceDemo/app/: CMakeLists.txt  build.gradle
OpenFaceDemo/app/src/main/: AndroidManifest.xml
OpenFaceDemo/app/src/main/cpp/: fps.h  native-lib.cpp  native-lib.h
OpenFaceDemo/app/src/main/java/com/example/openface/openfacedemo/: MainActivity.java
OpenFaceDemo/app/src/main/java/org/utils/: IOnModelsConfigurationListener.java  JniManager.java  KTUtils.java  LoadConfigurationsTask.java  WritePrivateStorage.java
OpenFaceDemo/app/src/main/res/layout/: activity_main.xml
OpenFaceDemo/app/src/main/res/raw/: ccnf_patches_05_ibug_glasses.txt  clnf_general.txt  clnf_ibug_glasses.txt  clnf_inner.txt  clnf_left_synth.txt  clnf_right_synth.txt  clnf_wild.txt  main_clnf_general_back.txt  main_clnf_ibug_glasses_movile.txt  main_clnf_wild.txt  validator_general_68.txt
OpenFaceDemo/app/src/main/res/values/: strings.xml
OpenFaceDemo/gradle/wrapper/: gradle-wrapper.properties
Openface_reduced/exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp
Openface_reduced/lib/local/LandmarkDetector/: CMakeLists.txt
Openface_reduced/lib/local/LandmarkDetector/include/: LandmarkDetectionValidator.h
Openface_reduced/lib/local/LandmarkDetector/model/custom_elements/patch_experts/: ccnf_patches_1_ibug_glasses.txt
Openface_reduced/lib/local/LandmarkDetector/model/custom_elements/pdms/: pdm_68_aligned_ibug+glasses.txt
Openface_reduced/lib/local/LandmarkDetector/model/model_inner/: clnf_inner.txt
Openface_reduced/lib/local/LandmarkDetector/model/patch_experts/: ccnf_patches_0.25_ibug_glasses.txt  ccnf_patches_0.35_ibug_glasses.txt
Openface_reduced/lib/local/LandmarkDetector/src/: LandmarkDetectionValidator.cpp  LandmarkDetectorModel.cpp  Patch_experts.cpp
exe/FaceLandmarkVid/: FaceLandmarkVid.cpp  universalTimer.h
ios/: .gitignore  Read.me
ios/CaptureAndRender/CPP_bridge/: OONativeSingleton.h  OONativeSingleton.mm
ios/CaptureAndRender/CameraCapture/: OOCameraController.h  OOCameraController.mm
ios/CaptureAndRender/Controllers/: OOMainViewController.mm  OOViewController.mm
ios/CaptureAndRender/Interaction/: OOInteractionController.mm
ios/CaptureAndRender/NativeCode/: NativeCode.cpp  NativeCode.h
ios/CaptureAndRenderSample.xcodeproj/: project.pbxproj
lib/local/LandmarkDetector/include/: stdafx.h
lib/local/LandmarkDetector/model/: clnf_ibug_glasses.txt
lib/local/LandmarkDetector/src/: LandmarkDetectorFunc.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp
